fix overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -33,6 +34,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  width: 100%;
 }
 
 .images {
@@ -45,14 +48,6 @@
   margin-left: 8px;
 }
 
-.picks {
-  border-left: 2px solid #282c34;
-}
-
-.picks .images {
-  width: 100%;
-}
-
 .drawing {
   background: white;
 }
@@ -60,7 +55,6 @@
 .selected {
   border: 3px solid #03a9fc;
 }
-
 
 .model-loading {
   display: flex;
